Fix overflow

--- a/web/main.css
+++ b/web/main.css
@@ -5,6 +5,7 @@ body {
   font-family: -apple-system, "BlinkMacSystemFont", "Segoe UI", "Roboto", "Helvetica Neue", "Arial", "Noto Sans", "sans-serif", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   background-color: #303030;
   padding: 40px;
+  overflow: hidden;
 }
 
 .status {
@@ -245,11 +246,6 @@ body {
 .weather .description .text:first-letter {
   text-transform: capitalize;
 }
-.weather .description .city {
-
-}
-
-/* ---------------- */
 
 nav {
   position: absolute;
